; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d.c_display_callback.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d.c_display_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32, i32, i32, i32 }
%struct.TYPE_5__ = type { i32 }

@DISPLAY_STRIDE_IN_PIXELS = common dso_local global i32 0, align 4
@DISPLAY_PIXEL_FORMAT = common dso_local global i32 0, align 4
@DISPLAY_WIDTH = common dso_local global i32 0, align 4
@DISPLAY_HEIGHT = common dso_local global i32 0, align 4
@SCE_DISPLAY_SETBUF_NEXTFRAME = common dso_local global i32 0, align 4
@vblank_wait = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @display_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @display_callback(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_6__, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %6, %struct.TYPE_5__** %4, align 8
  %7 = call i32 @memset(%struct.TYPE_6__* %3, i32 0, i32 24)
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  store i32 24, i32* %8, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 5
  store i32 %11, i32* %12, align 4
  %13 = load i32, i32* @DISPLAY_STRIDE_IN_PIXELS, align 4
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 4
  store i32 %13, i32* %14, align 4
  %15 = load i32, i32* @DISPLAY_PIXEL_FORMAT, align 4
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 3
  store i32 %15, i32* %16, align 4
  %17 = load i32, i32* @DISPLAY_WIDTH, align 4
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 2
  store i32 %17, i32* %18, align 4
  %19 = load i32, i32* @DISPLAY_HEIGHT, align 4
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 1
  store i32 %19, i32* %20, align 4
  %21 = load i32, i32* @SCE_DISPLAY_SETBUF_NEXTFRAME, align 4
  %22 = call i32 @sceDisplaySetFrameBuf(%struct.TYPE_6__* %3, i32 %21)
  %23 = load i64, i64* @vblank_wait, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %1
  %26 = call i32 (...) @sceDisplayWaitVblankStart()
  br label %27

27:                                               ; preds = %25, %1
  ret void
}

declare dso_local i32 @memset(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @sceDisplaySetFrameBuf(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @sceDisplayWaitVblankStart(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
